adjusted p2 site and composite